
==16 Sep 2013==
* Problem: If we create measures based on a measure without aggregation function, and we select several measures,
we do not create separate graph patterns. *solved*
* olap4ld tests were running endless since parentuniquemember with [null] had to be searched for.
Bug of having [null] names for "null"/null (according to spec) removed in Connection.Handler and Olap4ldUtil. 
* Status: Yahoo! Finance tests are not successful.
==12 Sep 2013==
* When transforming an MDX query to a query in MdxMethodVisitor, we distinguish whether a cube
is identified or not, via this.cube that is stored when visiting the from clause.

==8 Sep 2013==
* Problem: 
** How to ask for representation of Physical Query Tree?
*** simply allowing to ask LDE for last Physical Operator Tree
*** OR: How about defining better logging mechanism? 
*** Currently, we define logging level at Driver. We now try to log to a file.
* More logging in Slicer

==6 Sep 2013==
* Slicer_QueryTest.java [1] now executes all 1-dimensional OLAP queries to example cube.

==5 Sep 2013==
* Restrictions now use URI representation, but also are able to convert from MDX representation.
* Slicer_QueryTest.java [1] now contains test "test_example_ssb001_slicer_oneDim()", that creates 
all 1-dimensional OLAP queries to example cube

==2 Sep 2013==
* Renamed LD_Cubes test case to "Example_QB_Datasets_QueryTest".
* Logical Olap Op DiceOp now receives List<Node[]> of cube that is
used in query processing.
* removed all errors in sources
* Deactivated not successful tests in Example_QB_Datasets_QueryTest.
* Logical Olap Op SliceOp and RollupOp now receive List<Node[]> of cube that is
used in query processing. 
* OlapOps are now completely using Node[] with URI representation (not MDX representation) as inputs

==31 Aug 2013==
* Logical Olap Op ProjectionOp now receives List<Node[]> of cube that is
used in query processing.

==30 Aug 2013==
* Logical Olap Op BaseCube now receives List<Node[]> of cube that is